syntax = "proto3";

package zkp_auth;


message RegisterRequest {
    string user = 1;
    bytes y1 = 2;
    bytes y2 = 3;
}

message RegisterResponse {}

message AuthenticationChallengeRequest {
    string user = 1;
    bytes r1 = 2;
    bytes r2 = 3;
}

message AuthenticationChallengeResponse {
    string auth_id = 1;
    bytes c = 2;
}

message AuthenticationAnswerRequest {
    string auth_id = 1;
    bytes s = 2;
}

message AuthenticationAnswerResponse {
    string session_id = 1;
}

message Point {
    bytes x = 1;
    bool is_y_odd = 2;
}

message K256RegisterRequest {
    string user = 1;
    Point y1 = 2;
    Point y2 = 3;
}

message K256RegisterResponse {}

message K256AuthenticationChallengeRequest {
    string user = 1;
    Point r1 = 2;
    Point r2 = 3;
}

message K256AuthenticationChallengeResponse {
    string auth_id = 1;
    bytes c = 2;
}

message K256AuthenticationAnswerRequest {
    string auth_id = 1;
    bytes s = 2;
}

message K256AuthenticationAnswerResponse {
    string session_id = 1;
}


service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc CreateAuthenticationChallenge(AuthenticationChallengeRequest) returns (AuthenticationChallengeResponse) {}
    rpc VerifyAuthentication(AuthenticationAnswerRequest) returns (AuthenticationAnswerResponse) {}
    rpc K256Register(K256RegisterRequest) returns (K256RegisterResponse) {}
    rpc K256CreateAuthenticationChallenge(K256AuthenticationChallengeRequest) returns (K256AuthenticationChallengeResponse) {}
    rpc K256VerifyAuthentication(K256AuthenticationAnswerRequest) returns (K256AuthenticationAnswerResponse) {}
}
